[tool.poetry]
name = "llm-fine-tuning"
version = "0.1.0"
description = ""
authors = ["Xavier Belda <xaviblx@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.12"
torch = "2.0.0"
jupyterlab = "^4.0.7"
pandas = "^2.1.1"
datasets = "^2.14.6"
transformers = "^4.34.1"
mlflow = "^2.7.1"
ipywidgets = "^8.1.1"
bitsandbytes = "^0.41.1"
peft = "^0.5.0"
accelerate = "^0.23.0"
trl = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
